# notification-service

./: .gitignore  CMakeLists.txt  main.cpp
include/: instance_holder.h
include/builders/: builder.h  comment_dto_builders.h  project_dto_builders.h  tag_dto_builders.h  task_dto_builders.h  user_dto_builders.h
include/controllers/: comment_controllers.h  project_controllers.h  tag_controllers.h  task_controllers.h  user_controllers.h
include/dto/: comment_dto.h  project_dto.h  tag_dto.h  task_dto.h  user_dto.h
include/services/: comment_service.h  email_service.h  notification_service.h  project_service.h  tag_service.h  task_service.h  user_service.h
include/sql/: sqlite3_handler.h
src/: instance_holder.cpp
src/builders/: comment_dto_builders.cpp  project_dto_builders.cpp  tag_dto_builders.cpp  task_dto_builders.cpp  user_dto_builders.cpp
src/controllers/: comment_controllers.cpp  project_controllers.cpp  tag_controllers.cpp  task_controllers.cpp  user_controllers.cpp
src/dto/: comment_dto.cpp  project_dto.cpp  tag_dto.cpp  task_dto.cpp  user_dto.cpp
src/services/: comment_service.cpp  email_service.cpp  notification_service.cpp  project_service.cpp  tag_service.cpp  task_service.cpp  user_service.cpp
src/sql/: sqlite3_handler.cpp
